<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#989898">

    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemId">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#989898">

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/itemNama"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="5dp"
        android:text="@string/nama"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/itemHapus"
        app:layout_constraintHorizontal_bias="0.104"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemNomor"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:text="@string/nomor"
        android:layout_marginStart="5dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/itemHapus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNama"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/itemHapus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:text="@string/hapus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/itemId"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginStart="5dp"
        android:maxLength="12"
        android:text="@string/id"
        android:textColor="#F42121"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/itemHapus"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemNomor" />
</androidx.constraintlayout.widget.ConstraintLayout>